--- a/Taste/Views/Treats/Index.cshtml
+++ b/Taste/Views/Treats/Index.cshtml
@@ -13,6 +13,6 @@
     }
 </ul>
 
-<p>@Html.ActionLink("Add new Engineer", "Create")</p>
-<p>@Html.ActionLink("Add new Machine", "Create", "Machines")</p>
+<p>@Html.ActionLink("Add new Treat", "Create")</p>
+<p>@Html.ActionLink("Add new Machine", "Create", "Flavors")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
