WIP registration functionality

--- a/Taste/Views/Flavors/AddTreat.cshtml
+++ b/Taste/Views/Flavors/AddTreat.cshtml
@@ -2,10 +2,9 @@
 @using Taste.Models
 
 @{
-    <!-- ViewBag.Title = "AddTreat"; -->
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2 class="title">Add an Engineer</h2>
+<h2 class="title">Add a flavor</h2>
 
 <div class="content_box">
     <h4 class="bold">Add a treat: @Html.DisplayFor(model => model.Name) @Html.DisplayFor(model
