--- a/Taste/Views/Shared/_Layout.cshtml
+++ b/Taste/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta charset="utf-8" />
     <title>Welcome to Taste!</title>
-    <link rel="stylesheet" href="~/css/styles.css" />
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
