--- a/Taste/Views/Account/Login.cshtml
+++ b/Taste/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
 
 @using Taste.ViewModels
 
-@model Taste.ViewModels.LoginViewModel
+@model LoginViewModel
 
 <h2>Log in with your account</h2>
 <hr />
