modify flavor model and database

--- a/Taste/Views/Account/Register.cshtml
+++ b/Taste/Views/Account/Register.cshtml
@@ -22,6 +22,9 @@
   @Html.LabelFor(m => m.Password)
   @Html.EditorFor(m => m.Password)
 
+  @Html.LabelFor(user=> user.ConfirmPassword)
+  @Html.EditorFor(user=> user.ConfirmPassword)
+
   <input type="submit" value="Log in" />
 }
 
