--- a/Taste/Views/Flavors/Edit.cshtml
+++ b/Taste/Views/Flavors/Edit.cshtml
@@ -17,8 +17,8 @@
   @Html.LabelFor(model => model.Name)
   @Html.EditorFor(model => model.Name)
 
-  @Html.LabelFor(model => model.FlavorDescription)
-  @Html.EditorFor(model => model.FlavorDescription)
+  @Html.LabelFor(model => model.Description)
+  @Html.EditorFor(model => model.Description)
 
   <input type="submit" value="Save" />
 }
