--- a/Taste/Views/Treats/Index.cshtml
+++ b/Taste/Views/Treats/Index.cshtml
@@ -14,5 +14,5 @@
 </ul>
 
 <p>@Html.ActionLink("Add new Treat", "Create")</p>
-<p>@Html.ActionLink("Add new Machine", "Create", "Flavors")</p>
+<p>@Html.ActionLink("Add new Flavor", "Create", "Flavors")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
