--- a/Taste/Views/Flavors/Create.cshtml
+++ b/Taste/Views/Flavors/Create.cshtml
@@ -15,6 +15,10 @@
     @Html.Label("Name")
     @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
 
+    @Html.Label("Description")
+    @Html.TextBoxFor(model => model.Description, new { @class = "form-control" })
+
+
     <br>
 
     <input type="submit" value="Complete" class="btn btn-default" required="true" />
