--- a/Taste/Views/Treats/Details.cshtml
+++ b/Taste/Views/Treats/Details.cshtml
@@ -23,7 +23,7 @@ else
     <ul>
     @foreach (var join in Model.JoinEntities)
         {
-            <li>@join.Flavor.FlavorDescription</li>
+            <li>@join.Flavor.Description</li>
             @using (Html.BeginForm("DeleteFlavor", "Treats"))
 
             {
