--- a/Taste/Views/Home/Index.cshtml
+++ b/Taste/Views/Home/Index.cshtml
@@ -10,7 +10,25 @@
 @using System.Collections.Generic;
 
 
-<hr>
+@if (User.Identity.IsAuthenticated)
+{
+  <h4>Flavors for @User.Identity.Name</h4>
+  @if (Model["flavors"].Length == 0)
+  {
+    <p>No flavors have been added yet!</p>
+  } 
+  <ul>
+    @foreach (Flavor flavor in Model["flavors"])
+    {
+      <li>@Html.ActionLink(@flavor.Description, "Details", "Flavors", new { id = @flavor.FlavorId})</li>
+    }
+  </ul>
+}
+else
+{
+  <p class="header">
+    Please @Html.ActionLink("log in", "LogIn", "Account") to view or manage your flavors.
+  </p>
 
 <h4>Treats</h4>
 @if (Model["treats"].Length == 0)
@@ -36,28 +54,4 @@
   }
 </ul>
 
-@if (User.Identity.IsAuthenticated)
-{
-  <h4>Flavors for @User.Identity.Name</h4>
-  @if (Model["flavors"].Length == 0)
-  {
-    <p>No flavors have been added yet!</p>
-  } 
-  <ul>
-    @foreach (Flavor flavor in Model["flavors"])
-    {
-      <li>@Html.ActionLink(@flavor.Description, "Details", "Flavors", new { id = @flavor.FlavorId})</li>
-    }
-  </ul>
 }
-else
-{
-  <h4>Flavors</h4>
-  <p>Please @Html.ActionLink("log in", "LogIn", "Account") to view or manage your flavors.</p>
-}
-
-<hr />
-
-<p>@Html.ActionLink("Manage flavors", "Index", "Flavors")</p> 
-<p>@Html.ActionLink("Manage treats", "Index", "Treats")</p>
-<p>@Html.ActionLink("Create or manage an account", "Index", "Account")</p>
