--- a/Taste/Views/Treats/Create.cshtml
+++ b/Taste/Views/Treats/Create.cshtml
@@ -15,6 +15,11 @@
     @Html.Label("Name")
     @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
 
+    <br />
+
+    @Html.Label("Description")
+    @Html.TextBoxFor(model => model.Description, new { @class = "form-control" })
+
     <br>
 
     <input type="submit" value="Complete" class="btn btn-default" required="true" />
@@ -22,6 +27,6 @@
 
 <p>@Html.ActionLink("back to treats directory", "Index")</p>
 
-<!-- @Html.Label("Flavors")
-@Html.DropDownList("FlavorId", ViewBag.FlavorList as SelectList, string.Empty, new { @class = "form-control" }) -->
+    @Html.Label("Flavors")
+    @Html.DropDownList("FlavorId", ViewBag.FlavorList as SelectList, string.Empty, new { @class = "form-control" })
 
