fix treat controller, project fully functioning

--- a/Taste/Views/Flavors/Index.cshtml
+++ b/Taste/Views/Flavors/Index.cshtml
@@ -20,6 +20,6 @@ else
     }
   </ul>
 }
-<p>@Html.ActionLink("Add new treat", "Create")</p>
+<p>@Html.ActionLink("Add new treat", "Create", "Treats")</p>
 <p>@Html.ActionLink("Add new flavor", "Create", "Flavors")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
