--- a/Taste/Views/Treats/Details.cshtml
+++ b/Taste/Views/Treats/Details.cshtml
@@ -35,8 +35,8 @@ else
 }
 
 <ul class="menu-links">
-    <li>@Html.ActionLink("edit treat", "Edit", new { id = Model.TreatId })</li>
-    <li>@Html.ActionLink("delete treat", "Delete", new { id = Model.TreatId })</li>
-    <li>@Html.ActionLink("assign to a flavor", "AddFlavor", new { id = Model.TreatId })</li>
-    <li>@Html.ActionLink("back to treat directory", "Index")</li>
+    <p>@Html.ActionLink("edit treat", "Edit", new { id = Model.TreatId })</p>
+    <p>@Html.ActionLink("delete treat", "Delete", new { id = Model.TreatId })</p>
+    <p>@Html.ActionLink("assign to a flavor", "AddFlavor", new { id = Model.TreatId })</p>
+    <p>@Html.ActionLink("back to treat directory", "Index")</p>
 </ul>
