--- a/Taste/Views/Treats/Details.cshtml
+++ b/Taste/Views/Treats/Details.cshtml
@@ -19,19 +19,19 @@
 }
 else
 {
-    <h4>Treat flavor list</h4>
+    <h4>Your treat and their flavors associated with it!</h4>
     <ul>
     @foreach (var join in Model.JoinEntities)
-        {
-            <li>@join.Flavor.Description</li>
-            @using (Html.BeginForm("DeleteFlavor", "Treats"))
-
-            {
-                @Html.Hidden("joinId", @join.TreatFlavorId)
-                <input type="submit" value="remove" />
-            }
-        }
-    </ul>
+{
+    <li>@Html.ActionLink($"{join.Flavor.Name}", "Details", "Flavors", new { id = join.Flavor.FlavorId })</li>
+    @using (Html.BeginForm("DeleteFlavor", "Treats"))
+{
+    
+    @Html.Hidden("joinId", @join.TreatFlavorId)
+    <input type="submit" value="delete"/>
+    }
+    }
+  </ul>
 }
 
 <ul class="menu-links">
